<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zaneta.lab2_cz2.OknoGlowne">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekstA"
        android:textSize="30dp"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst16"
        android:onClick="obliczanie"

        android:layout_marginTop="28dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst33"
        android:layout_marginTop="17dp"
        android:onClick="ocen"

        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bmr"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
